# ansible--awx_plugins.interfaces

./: .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .mypy.ini  .pre-commit-config.yaml  .pylintrc.toml  CONTRIBUTING.md  README.md  nitpick-style.toml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci-cd.yml
_type_stubs/awx/main/models/: credential.pyi
_type_stubs/django/conf/: settings.pyi
_type_stubs/django/utils/: translation.pyi
dependencies/lock-files/: build-docs-cp311-darwin-x86_64.txt  build-docs-cp311-linux-x86_64.txt  build-docs-cp312-darwin-arm64.txt  build-docs-cp312-darwin-x86_64.txt  build-docs-cp313-darwin-arm64.txt  build-docs-cp313-darwin-x86_64.txt  linkcheck-docs-cp311-darwin-x86_64.txt  linkcheck-docs-cp311-linux-x86_64.txt  linkcheck-docs-cp312-darwin-x86_64.txt  linkcheck-docs-cp312-linux-x86_64.txt  linkcheck-docs-cp313-darwin-x86_64.txt  py311-cp311-darwin-arm64.txt  py311-cp311-darwin-x86_64.txt  py312-cp312-darwin-x86_64.txt  py312-cp312-linux-x86_64.txt  py313-cp313-darwin-arm64.txt  py313-cp313-darwin-x86_64.txt  spellcheck-docs-cp311-darwin-x86_64.txt  spellcheck-docs-cp312-darwin-arm64.txt  spellcheck-docs-cp312-darwin-x86_64.txt  spellcheck-docs-cp313-darwin-x86_64.txt  spellcheck-docs-cp313-linux-x86_64.txt
docs/: conf.py  index.md  spelling_wordlist.txt
docs/contributing/: release_guide.md
src/awx_plugins/interfaces/: _temporary_private_api.py  _temporary_private_container_api.py  _temporary_private_django_api.py  _temporary_private_injector_api.py  _temporary_private_licensing_api.py  api.py  py.typed
tests/: _temporary_private_api_test.py  _temporary_private_container_api_test.py  _temporary_private_django_api_test.py  _temporary_private_licensing_api_test.py  smoke_test.py
